# tensorrt-llm-model-user

./: .gitignore  LICENSE  Makefile  README.md  outputs.example.json  prompts.example.json  pyproject.toml
.github/workflows/: ci.yaml
src/job/: batch_grpc.py  batch_http.py  main.py  stress.py
src/job/helpers/: network.py  runner.py
src/job/models/: __init__.py  customer_support_response.py  model_response.py
