[project]
name = "tensorrt-llm-model-user"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "transformers>=4.51.3",
    "tritonclient>=2.46.0",
]

[dependency-groups]
ci = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
    "types-requests>=2.32.0.20250328",
]
